--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Online Maze Web" />
+    <meta property="og:url" content="https://shubymao.github.io/multiplayer-maze-web/" />
+    <meta property="og:title" content="Online Maze Web" />
+    <meta property="og:description" content="Compete with your friend to the end of the maze!!." />
+    <meta
+      property="og:image"
+      content="https://github.com/shubymao/multiplayer-maze-web/blob/main/public/ogimage.png?raw=true"
+    />
     <link rel="apple-touch-icon" size="196x196" type="image/png" href="%PUBLIC_URL%/logo196.png" />
     <link rel="icon" type="image/png" size="196x196" href="%PUBLIC_URL%/logo196.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
