--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Online Maze Web" />
-    <meta property="og:url" content="%PUBLIC_URL%/" />
+    <meta property="og:url" content="https://shubymao.github.io/multiplayer-maze-web/" />
     <meta property="og:title" content="Online Maze Web" />
     <meta property="og:description" content="Compete with your friend to the end of the maze!!." />
     <meta property="og:image" content="%PUBLIC_URL%/ogimage.png" />
